--- a/xi-server/src/main/resources/db.properties
+++ b/xi-server/src/main/resources/db.properties
@@ -1,9 +1,6 @@
 jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/xintern?useUnicode=true&characterEncoding=UTF-8
-jdbc.url=jdbc:mysql://localhost:3306/xiangshixi?useUnicode=true&characterEncoding=UTF-8
-#jdbc.username=xintern
-#jdbc.password=ddcreative
-jdbc.username=root
-jdbc.password=root
-#dbname=xintern
-dbname=xiangshixi
+jdbc.url=jdbc:mysql://127.0.0.1:3306/xintern?useUnicode=true&characterEncoding=UTF-8
+jdbc.username=xintern
+##jdbc.password=sublime
+jdbc.password=ddcreative
+dbname=xintern
